security_group.tf
resource "aws_security_group" "bilal_security_group" {
  name   = "ecs-security-group"
  vpc_id = aws_vpc.bilalvpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    self        = "false"
    cidr_blocks = ["0.0.0.0/0"]
    description = "any"
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
